--- a/debug/Untitled.ipynb
+++ b/debug/Untitled.ipynb
@@ -2,32 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import adafdr.method as md\n",
-    "import adafdr.data_loader as dl"
+    "import adafdr.data_loader as dl\n",
+    "\n",
+    "%matplotlib inline\n",
+    "%load_ext autoreload\n",
+    "%autoreload 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<function adafdr.method.bh>"
+       "<function adafdr.method.bh_test>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "adafdr.bh"
+    "md.bh_test"
    ]
   },
   {
@@ -48,6 +52,41 @@
    ],
    "source": [
     "dl.load_100D"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Help on function ML_slope in module adafdr.method:\n",
+      "\n",
+      "ML_slope(x, v=None, c=0.005)\n",
+      "    ML fit of the slope a/(e^a-1) e^(ax), defined over [0,1]\n",
+      "    \n",
+      "    Parameters\n",
+      "    ----------\n",
+      "    x : (n,d) ndarray\n",
+      "        covaraites\n",
+      "    v : (n,) ndarray \n",
+      "        weight for each sample\n",
+      "    c : float\n",
+      "        regularization factor \n",
+      "    \n",
+      "    Returns\n",
+      "    -------\n",
+      "    (d,) ndarray\n",
+      "        the estiamted slope parameter\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "help(md.ML_slope)"
    ]
   },
   {
