--- a/debug/README.ipynb
+++ b/debug/README.ipynb
@@ -78,22 +78,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "numpy.ndarray"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "# AdaFDR successfully finished! \n",
+      "# D=840, FD=80, FDP=0.095\n"
+     ]
     }
    ],
    "source": [
-    "type(p)"
+    "import adafdr\n",
+    "import numpy as np\n",
+    "p,x,h,_,_ = adafdr.data_loader.load_1d_bump_slope()\n",
+    "n_rej,t_rej,theta = adafdr.method.adafdr_test(p, x, fast_mode=True)\n",
+    "D = np.sum(p<=t_rej)\n",
+    "FD = np.sum((p<=t_rej)&(~h))\n",
+    "print('# AdaFDR successfully finished! ')\n",
+    "print('# D=%d, FD=%d, FDP=%0.3f'%(D, FD, FD/D))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D=840, FD=80, FDP=0.095\n"
+     ]
+    }
+   ],
+   "source": [
+    "D = np.sum(p<=t_rej)\n",
+    "FD = np.sum((p<=t_rej)&(~h))\n",
+    "print('D=%d, FD=%d, FDP=%0.3f'%(D, FD, FD/D))"
    ]
   },
   {
