--- a/vignette/airway.ipynb
+++ b/vignette/airway.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +111,9 @@
     }
    ],
    "source": [
-    "n_rej,t_rej,theta = md.adafdr_test(p, x)\n",
+    "res = md.adafdr_test(p, x)\n",
+    "n_rej = res['n_rej']\n",
+    "t_rej = res['t_rej']\n",
     "print('number of discoveris: %d'%np.sum(p<=t_rej))\n",
     "plt.figure()\n",
     "plt.scatter(x, p, alpha=0.2, s=4)\n",
@@ -121,6 +123,13 @@
     "plt.legend(fontsize=16)\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
