--- a/vignette/small_gtex.ipynb
+++ b/vignette/small_gtex.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,9 @@
     }
    ],
    "source": [
-    "n_rej,t_rej,theta = md.adafdr_test(p, x, n_full=n_full, alpha=0.01)\n",
+    "res = md.adafdr_test(p, x, n_full=n_full, alpha=0.01)\n",
+    "n_rej = res['n_rej']\n",
+    "t_rej = res['t_rej']\n",
     "print('number of discoveris: %d'%np.sum(p<=t_rej))\n",
     "ind_rand = np.random.permutation(50000)[0:5000]\n",
     "plt.figure()\n",
