--- a/vignette/passila.ipynb
+++ b/vignette/passila.ipynb
@@ -111,7 +111,9 @@
     }
    ],
    "source": [
-    "n_rej,t_rej,theta = md.adafdr_test(p, x)\n",
+    "res = md.adafdr_test(p, x)\n",
+    "n_rej = res['n_rej']\n",
+    "t_rej = res['t_rej']\n",
     "print('number of discoveris: %d'%np.sum(p<=t_rej))\n",
     "plt.figure()\n",
     "plt.scatter(x, p, alpha=0.2, s=4)\n",
